--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@
 # in the templates via {{ site.myvariable }}.
 
 title: "LiODi: Linked Open Dictionaries"
-email: ionov@informatik.uni-frankfurt.de
+email: "ionov@informatik.uni-frankfurt.de"
 description: >- # this means to ignore newlines until "baseurl:"
   
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/liodi" # the subpath of your site, e.g. /blog
+url: "http://ionov.me" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 #theme: minima
