--- a/_data/software.yml
+++ b/_data/software.yml
@@ -3,14 +3,14 @@
   img: img/liodin-main.png
   description: >-
     A web interface that allows users to load and browse OntoLex-lemon dictionaries.
-  id: liodin
+  folder: liodin
 
 - name: LiODVa
   full-name: Linked Open Dictionary Validator
   img: img/liodva-main.png
   description: >-
     A handy tool to validate the correctness of generated OntoLex-lemon dictionaries and preview first rows.
-  id: liodva
+  folder: liodva
 
 - name: LiOTRea
   full-name: Linked Open Text Reader and Annotator
@@ -23,7 +23,7 @@
     It supports using dictionaries represented in RDF in the OntoLex-lemon model as a basis for lemmatization, 
     phonological search lookup functionality against any dictionary, 
     and the enrichment/creation of Ontolex-lemon dictionaries during the annotation process.
-  id: liotrea
+  folder: liotrea
   
 # - name: cqp4rdf
 #   full-name: cqp4rdf
